# mcp-planfix

./: .env.example  .gitignore  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt
docs/: api_reference.md  troubleshooting.md
examples/: __init__.py  advanced_workflows.py  basic_usage.py
src/: __init__.py  config.py  models.py  planfix_api.py  planfix_server.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_server.py  test_utils.py
